Fixed icon spacing

--- a/view/src/main/resources/static/sass/partials/pages/_proposals.scss
+++ b/view/src/main/resources/static/sass/partials/pages/_proposals.scss
@@ -700,7 +700,7 @@ $p-Proposal__propbox--green: $t-Color__secondary--light !default;
 
   img {
     vertical-align: middle;
-    padding-right: 10px;
+    margin-right: 10px;
   }
 }
 
