--- a/view/src/main/resources/static/sass/partials/pages/_proposalsPortlet.scss
+++ b/view/src/main/resources/static/sass/partials/pages/_proposalsPortlet.scss
@@ -152,7 +152,7 @@
 .request-membership-icon {
     float: left;
     margin-top: 8px;
-    padding-right: 10px;
+    margin-right: 10px;
 }
 
 .membership-request-comment-admin {
